--- a/src/components/game/Card.css
+++ b/src/components/game/Card.css
@@ -1,12 +1,13 @@
 :local(.card) {
   border: 1px solid black;
-  text-align: center;
-  width: 175px;
   margin: 0;
   padding: 0;
+  text-align: center;
+  width: 175px;
 }
 
 :local(.card) img {
+  display: block;
   max-height: 100%;
   max-width: 100%;
 }
